Fix height and alignment of checkbox in run modal

--- a/src/ImageRunModal.scss
+++ b/src/ImageRunModal.scss
@@ -15,4 +15,14 @@
         display: flex;
         align-items: flex-end;
     }
+
+    // Set check to the same height as input widgets and vertically align
+    .pf-c-form__group-control > .pf-c-check {
+        // Set height to the same as inputs
+        // Font height is font size * line height (1rem * 1.5)
+        // Widgets have 5px padding, 1px border (top & bottom): (5 + 1) * 2 = 12
+        // This all equals to 36px
+        height: calc(var(--pf-global--FontSize--md) * var(--pf-global--LineHeight--md) + 12px);
+        align-content: center;
+    }
 }
